Flickering fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -436,8 +436,7 @@ ul.nav.vertical {
   width: 60px;
   height: 100%; }
   .side-nav .nav li {
-    position: relative;
-    -webkit-transform: translate3d(0, 0, 0); }
+    position: relative; }
   .side-nav .nav i {
     display: block;
     font-size: 30px; }
@@ -471,23 +470,33 @@ ul.nav.vertical {
     -moz-transition: width 0.8s ease, border-right 0.8s ease;
     -ms-transition: width 0.8s ease, border-right 0.8s ease;
     -o-transition: width 0.8s ease, border-right 0.8s ease;
-    transition: width 0.8s ease, border-right 0.8s ease; }
+    transition: width 0.8s ease, border-right 0.8s ease;
+    -webkit-perspective: 1000;
+    -webkit-transform: translate3d(0, 0, 0); }
 
 #about:target::before {
   display: block;
-  border-right: 10px solid white; }
+  border-right: 10px solid white;
+  -webkit-perspective: 1000;
+  -webkit-transform: translate3d(0, 0, 0); }
 
 #projects:target::before {
   display: block;
-  border-right: 10px solid white; }
+  border-right: 10px solid white;
+  -webkit-perspective: 1000;
+  -webkit-transform: translate3d(0, 0, 0); }
 
 #resume:target::before {
   display: block;
-  border-right: 10px solid white; }
+  border-right: 10px solid white;
+  -webkit-perspective: 1000;
+  -webkit-transform: translate3d(0, 0, 0); }
 
 #blog:target::before {
   display: block;
-  border-right: 10px solid white; }
+  border-right: 10px solid white;
+  -webkit-perspective: 1000;
+  -webkit-transform: translate3d(0, 0, 0); }
 
 .side-nav-content {
   text-align: center; }
