--- a/public/scss/modules/_utility.scss
+++ b/public/scss/modules/_utility.scss
@@ -136,6 +136,9 @@
 		display: block;
 		border-right: 10px solid $white;
 
+		-webkit-perspective: 1000;
+		-webkit-transform:translate3d(0,0,0);
+		
 		//width: 100%; media query
 	}
 }
